# notes

./: .gitignore  .gitmodules
backend-development-school/lectures/distributed_systems_architecture/: conspect.md
testing/GoogleTest/: CMakeLists.txt  GoogleTest.md
testing/GoogleTest/code/: test_factorial.cc  test_parametrized.cc  test_parametrized_with_naming.cc  test_simple.cc  test_vector.cc  test_with_assertion_result.cc
testing/pytest/: pytest.md
testing/pytest/pytest_samples/fixtures/: test_simple_fixture.py
testing/pytest/pytest_samples/fixtures/cards/: test_cards.py
testing/pytest/pytest_samples/fixtures/configured/: conftest.py  test_cards.py
testing/pytest/pytest_samples/introduction/: more_dummy_tests.py
testing/pytest/pytest_samples/introduction/dummy_test/: dummy_test.py
testing/pytest/pytest_samples/markers/: test_markers_example.py
testing/pytest/pytest_samples/parametrization/cards/: test_cards_parametrized_fixture.py  test_cards_parametrized_testcase.py
